# i4h-sensor-simulation

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  i4h
.github/: markdown-link-check.json
.github/workflows/: check-links.yml  ci.yml  copyright.yml  fluoro-simulator-ci.yml  ultrasound-raytracing-build.yml
.tools/: ensure_license.py
docs/: ultrasound_simulator_getting_started.md  ultrasound_simulator_technical_guide.md
fluoro-simulator/: .gitignore  Dockerfile  README.md  metadata.json  pyproject.toml
fluoro-simulator/.devcontainer/: Dockerfile  devcontainer.json
fluoro-simulator/docker/: Dockerfile
fluoro-simulator/docs/: architecture-and-api.md  examples-and-test-data.md
fluoro-simulator/examples/: FluoroSim-from-CT-Gen.ipynb  __init__.py  fluorosim_demo.ipynb  fluorosim_demo.py  preprocess_ct.py  xray_interactive_view.py  xray_interactive_view_qt.py
fluoro-simulator/fluorosim/: __init__.py  config.py  preprocessor.py  simulator.py  volume.py
fluoro-simulator/fluorosim/ct/: __init__.py  dicom_ingest.py
fluoro-simulator/fluorosim/rendering/: __init__.py  diffdrr_slang.slang  diffdrr_slang_renderer.py  realism.py
fluoro-simulator/tests/: conftest.py  test_preprocessor.py
tools/: ensure_license.py
ultrasound/: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  holoscan_recon.py  pyproject.toml
ultrasound-raytracing/: .gitignore  CMakeLists.txt  README.md  benchmark_results.txt  build_and_run.sh  holoscan_recon.py  metadata.json  pyproject.toml
ultrasound-raytracing/.devcontainer/: Dockerfile  devcontainer.json
ultrasound-raytracing/cmake/: GenHeaderFromTextFile.cmake  SetupCUDA.cmake  add_string_literal.sh
ultrasound-raytracing/csrc/: CMakeLists.txt
ultrasound-raytracing/csrc/core/: CMakeLists.txt  material.cpp  raytracing_ultrasound_simulator.cpp  ultrasound_probe.cpp  world.cpp
ultrasound-raytracing/csrc/cuda/: CMakeLists.txt  cuda_algorithms.cu  cuda_algorithms.cu.bak  cuda_helper.cpp  optix_helper.cpp  optix_trace.cu  phased_array_fix.cu
ultrasound-raytracing/csrc/python/: CMakeLists.txt  raysim_bindings.cpp
ultrasound-raytracing/docker/: Dockerfile
ultrasound-raytracing/docs/: baremetal_build.md  docker_build.md  ultrasound_simulator_getting_started.md  ultrasound_simulator_technical_guide.md
ultrasound-raytracing/examples/: benchmark.py  benchmark_gan.py  liver_sweep.py  run_validator.py  server.py  sphere_sweep.py
ultrasound-raytracing/examples/cpp/: CMakeLists.txt  main.cpp
ultrasound-raytracing/examples/raytracing_to_us/: README.md  export_to_trt.py  fake3d_us_generation.py  generator.py  mesh_generation.py  ray_tracing_fake_us_obj.py  ray_tracing_generation.py  requirements.txt  usd_generation.py  utility.py
ultrasound-raytracing/examples/raytracing_to_us/raytracing_dataset/: usd_generation.py  utility.py
ultrasound-raytracing/examples/raytracing_to_us/us_dataset/: download_data.sh
ultrasound-raytracing/examples/templates/: index.html
ultrasound-raytracing/include/cuda/: helpers.h
ultrasound-raytracing/include/raysim/core/: curvilinear_probe.hpp  hitable.hpp  linear_array_probe.hpp  material.hpp  math_utils.hpp  nullable_pointer.hpp  phased_array_probe.hpp  pose.hpp  probe.hpp  probe_factory.hpp  probe_types.hpp  raytracing_ultrasound_simulator.hpp  transform_utils.hpp  ultrasound_probe.hpp  world.hpp  write_image.hpp
ultrasound-raytracing/include/raysim/cuda/: cuda_algorithms.hpp  matrix.hpp  optix_trace.hpp
ultrasound-raytracing/include/sutil/: Preprocessor.h  vec_math.h
ultrasound-raytracing/raysim/: __init__.py  visualize.py
ultrasound-raytracing/raysim/core/: __init__.py
ultrasound-raytracing/raysim/cuda/: __init__.py
ultrasound-raytracing/raysim/utils/: __init__.py
ultrasound-raytracing/test/: test_basic.py
ultrasound-raytracing/utils/: phantom_maker.py
ultrasound/.devcontainer/: Dockerfile  devcontainer.json
ultrasound/csrc/: CMakeLists.txt
ultrasound/csrc/core/: hitable.cpp  pose.cpp  raytracing_ultrasound_simulator.cpp  write_image.cpp
ultrasound/csrc/cuda/: CMakeLists.txt  cuda_algorithms.cu  optix_trace.cu
ultrasound/csrc/python/: CMakeLists.txt  raysim_bindings.cpp
ultrasound/examples/: benchmark.py  liver_sweep.py  server.py  sphere_sweep.py
ultrasound/examples/cpp/: main.cpp
ultrasound/examples/templates/: index.html
ultrasound/include/raysim/core/: hitable.hpp  pose.hpp  raytracing_ultrasound_simulator.hpp
ultrasound/include/raysim/cuda/: cuda_helper.hpp  matrix.hpp  optix_helper.hpp
ultrasound/raysim/: __init__.py  visualize.py
ultrasound/raysim/core/: __init__.py
ultrasound/raysim/cuda/: __init__.py
ultrasound/utils/: phantom_maker.py
