[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluorosim"
version = "0.1.0"
description = "GPU-accelerated fluoroscopy (X-ray) simulation from CT volumes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
all = [
    "matplotlib>=3.9.0",
    "nibabel>=5.0.0",
    "pillow>=11.0.0",
    "pydicom>=2.4.0",
    "SimpleITK>=2.3.0",
    "slangpy>=0.40",
    "tqdm>=4.67.1",
    "warp-lang>=1.0.0",
]
slang = [
    "slangpy>=0.40",
]
warp = [
    "warp-lang>=1.0.0",
]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fluorosim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests as slow running",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".eggs/",
]

[tool.coverage.run]
source = ["fluorosim"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
