[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "raysim"
version = "0.1.0"
description = "Ray-tracing based ultrasound simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
all = [
    "configparser>=7.1.0",
    "cupy-cuda12x>=13.3.0",
    "flash>=1.0.3",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "imageio>=2.36.1",
    "logger>=1.4",
    "matplotlib>=3.9.0",
    "pillow>=11.0.0",
    "pyqt5>=5.15.11",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
dev = [
    "pre-commit>=3.5.0",
]

[tool.scikit-build]
cmake.minimum-version = "3.24.0"
cmake.build-type = "Release"
wheel.packages = ["raysim"]
build-dir = "build-release"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_EXAMPLES = "OFF"
